--- a/application-noteblogv5.properties
+++ b/application-noteblogv5.properties
@@ -3,8 +3,8 @@
 app.develop=false
 #上传文件路径，需要以file:打头
 #windows下使用磁盘符开头，Linux和MacOs使用/开头，以/结尾，两者都是绝对路径
-# eg：file:F://upload/noteblogv5/（windows下），file:/home/noteblogv5/（Linux，MacOs下）
-app.upload.path=file:E://aaa/uploadv5/
+# eg：file:F://upload/noteblog/（windows下），file:/home/noteblog/（Linux，MacOs下）
+app.upload.path=file:E://aaa/upload/
 #---------------------------------------------------------------------------------------------------------------
 #---------------------------------------------------------------------------------------------------------------
 #数据库相关配置，都有缺省值
@@ -22,8 +22,8 @@ db.password=root
 #若启用ssl配置，此项则表示https端口，否则为http端口，
 server.port=9999
 #启用ssl之后配置证书，证书的绝对路径，需要以file:打头
-# eg：file:F://nbv5/certificate.jks（windows下），file:/home/nbv5/certificate.jks（Linux，MacOs下）
-#server.ssl.key-store=file:E://aaa/wuwenbin.me.jks
+# eg：file:F://nb/certificate.jks（windows下），file:/home/nb/certificate.jks（Linux，MacOs下）
+#server.ssl.key-store=file:E://aaa/java.me.jks
 #证书密码
 #server.ssl.key-password=7273688466
 #证书类型，默认jks，如需要ssl配置，放开此配置项属性即可
